not-used/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: jellyfin/jellyfin:latest
        imagePullPolicy: Always
        resources:
          limits:
            amd.com/gpu: 1
        name: jellyfin
        ports:
        - containerPort: 8096
          name: web
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-media
          mountPath: /media
        - name: jellyfin-cache
          mountPath: /cache
        # - name: render
        #   mountPath: /dev/dri/renderD128
        # - name: card
        #   mountPath: /dev/dri/card0
        # securityContext:
        #   privileged: true
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: jellyfin-cache
        emptyDir: {}
      # - name: render
      #   hostPath:
      #     path: /dev/dri/renderD128
      # - name: card
      #   hostPath:
      #     path: /dev/dri/card0
